--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 
 <hr />
 
+<p style=”color:#454545;font-size:16px;font-weight:normal;font-style:italic;text-align:left;”> TO-DO</p>
+<input type="checkbox" id="task1" name="task1" value="Checkbox">
+<label for="task1"> Add Checkbox</label><br>
+<input type="checkbox" id="task2" name="task2" value="About me">
+<label for="task2"> Create About Me/Resume </label><br>
+<input type="checkbox" id="task3" name="task2" value="Skills">
+<label for="task3"> Add Skills to about me</label><br>
+
 <p style=”color:#454545;font-size:16px;font-weight:normal;font-style:italic;text-align:left;”>Latest Updates</p>
 
 <p style=”color:#000;font-size:14px;font-weight:normal;text-align:left;”>
