updated work tab

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Welcome to my Page</h1>
-								<p>You have stumbled upon the lovely webpage of Thomas McLean. This is my little nook on the Internet, featuring my about me, daily blog post and projects(Completed, on-going and future).</p>
+								<p>You have stumbled upon the lovely webpage of Thomas McLean. This is my little nook on the Internet, featuring my about me, daily blog post and projects(Completed, On-Going and Future).</p>
 							</div>
 						</div>
 						<nav>
@@ -40,16 +40,24 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>I'm a self-taught full-stack developer that enjoys tackling new challenges and is known for their ability to improve quickly using introspection and problem-solving. Ask me about one of the my ongoing projects.</p>
+								<p>Check out some of my</p><a href="#work">projects</a>.</p>
 							</article>
 
 						<!-- Page: Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>My experience as an Software engineer has been anything but typical. My team's focus is to create new products for market testing and MVPs.</p>
+								<p>While my Teams's Quaterly/Yearly goals are focused on new products. We regularly are used to help carry the load for other teams/products.</p>
+								<p>So While specializing in Back-end programming languages like Elixir/Phoenix and Ruby/Rails. It is normal for a few members of the team to have enterprise-level experience in other domains.</p>
+								<p>Help create and maintain Docker containers + AWS/Terraform for managing apps and infrastructure.</p>
+								<ul>
+									<li>Create and maintain internal APIs for internal customers to exchange data with external clients.</li>
+									<li>Develop plans for project-specific technical requirements and builds technical standards for integrations and other projects.</li>
+									<li>Built real time benefit check system to reduce external calls and optimize agents ability to assist providers.</li>
+									<li>Deconstruct new product ideas to plan/organize technical work for multiple applications.</li>
+								  </ul>
 							</article>
 
 						<!-- Page: About Me -->
