--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			</article>
 
 			<!-- Page: About Me -->
-			<article id="Skills">
+			<article id="skills">
 				<h2 class="major">Skills</h2>
 				<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 				<table>
