fixed skills page

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				</ul>
 			</article>
 
-			<!-- Page: About Me -->
+			<!-- Page: Skills -->
 			<article id="skills">
 				<h2 class="major">Skills</h2>
 				<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
@@ -89,7 +89,7 @@
 					<tr>
 						<td>Elixir</td>
 						<td>4/5</td>
-						<td>&nbsp;<< /td>
+						<td>&nbsp;</td>
 					</tr>
 					<tr>
 						<td>Ruby</td>
